--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swr": "^2.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
