--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "swr": "^2.1.1"
   },
